WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
135201
[WinCairo] Gstreamer rendering is not working.
https://bugs.webkit.org/show_bug.cgi?id=135201
Summary
[WinCairo] Gstreamer rendering is not working.
peavo
Reported
2014-07-23 10:28:09 PDT
Gstreamer is not enabled on WinCairo, but if someone should want to try it out, rendering is not working.
Attachments
Patch
(1.57 KB, patch)
2014-07-23 10:32 PDT
,
peavo
no flags
Details
Formatted Diff
Diff
Patch
(1.67 KB, patch)
2014-07-23 14:00 PDT
,
peavo
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
peavo
Comment 1
2014-07-23 10:32:01 PDT
Created
attachment 235357
[details]
Patch
Alex Christensen
Comment 2
2014-07-23 13:49:09 PDT
This could be implemented someday. Could you put a FIXME comment saying that it just hasn't been implemented yet?
peavo
Comment 3
2014-07-23 14:00:39 PDT
Created
attachment 235374
[details]
Patch
peavo
Comment 4
2014-07-23 14:01:29 PDT
(In reply to
comment #2
)
> This could be implemented someday. Could you put a FIXME comment saying that it just hasn't been implemented yet?
Thanks for reviewing, updated patch :)
WebKit Commit Bot
Comment 5
2014-07-23 14:56:51 PDT
Comment on
attachment 235374
[details]
Patch Clearing flags on attachment: 235374 Committed
r171492
: <
http://trac.webkit.org/changeset/171492
>
WebKit Commit Bot
Comment 6
2014-07-23 14:56:53 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug