[WinCairo] Gstreamer rendering is not working. https://bugs.webkit.org/show_bug.cgi?id=135201

Patch by peavo@outlook.com <peavo@outlook.com> on 2014-07-23
Reviewed by Alex Christensen.

WinCairo does not support accelerated rendering yet.

* platform/graphics/gstreamer/MediaPlayerPrivateGStreamerBase.h:
(WebCore::MediaPlayerPrivateGStreamerBase::supportsAcceleratedRendering):

Canonical link: https://commits.webkit.org/153132@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@171492 268f45cc-cd09-0410-ab3c-d52691b4dbfc